# regpoly

./: .dockerignore  .gitignore  .gitmodules  404.html  CHANGELOG.md  CLAUDE.md  CODE_STRUCTURE.md  DEPLOY.md  LICENSE  README.md  compare_transition.sh  index.html  mkdocs.yml  pyproject.toml  regpoly.db  sitemap.xml
cpp_regpoly/: .gitignore  README.md  pyproject.toml  regpoly-web.sh  setup.py
cpp_regpoly/docs/: search_format.md  tempering_optimization.md
cpp_regpoly/docs/generators/: AC1DGen.md  DSFMTGen.md  F2wLFSRGen.md  GenF2wLFSR.md  GenF2wPolyLCG.md  MELG.md  MTGPGen.md  MTGen.md  MarsaXorshiftGen.md  MatsumotoGen.md  MersenneTwister.md  PolyLCG.md  PolyLCGGen.md  SFMTGen.md  TGFSRGen.md  Tausworthe.md  TauswortheGen.md  WELLRNG.md  XorShift128Gen.md
cpp_regpoly/notebooks/: bitmatrix_display.ipynb  genf2w_equidistribution.ipynb  marsaxorshift_equidistribution.ipynb  matsumoto_equidistribution.ipynb  melg19937_search.ipynb  melg607_search.ipynb  melg_charpoly_derivation.ipynb  melg_paper_verification.ipynb  mt19937_equidistribution.ipynb  polylcg_equidistribution.ipynb  tausworthe_equidistribution.ipynb  tgfsr_equidistribution.ipynb  tgfsr_fullperiod_search.ipynb  well_equidistribution.ipynb
cpp_regpoly/src/cpp/bindings/: bindings.cpp
cpp_regpoly/src/cpp/core/: factory.cpp  generator.cpp
cpp_regpoly/src/cpp/generators/: f2w_base.cpp  f2w_lfsr.cpp  f2w_polylcg.cpp  matsumoto.cpp  melg.cpp  mt.cpp  mtgp.cpp  polylcg.cpp  rmt64.cpp  sfmt.cpp  tausworthe.cpp  tinymt32.cpp  well.cpp
cpp_regpoly/src/python/: __init__.py
cpp_regpoly/src/regpoly/: __init__.py  cli.py  combinaison.py  combinaison_build.py  component.py  generateur.py  legacy_reader.py  library.py  matrix.py  parametric.py  primitivity.py  search_primitive.py  seek.py  tempering_optimizer.py  tempering_search.py  tested_generator.py  transformation.py
cpp_regpoly/tests/: _gen_mttoolbox_reference.py  _mttoolbox_build.md  dsfmt_mttoolbox_d5.py  sfmt_mttoolbox_d5.py  test_mttoolbox_crosscheck.py  test_notprimitive_de.py  test_simd_notprimitive.py  test_smoke.py  xorshift_mttoolbox_d5.py
pkg_regpoly/: README.md  pyproject.toml  setup.py
pkg_regpoly/src/regpoly/: __init__.py  bitvect.py  cli.py  combinaison.py  component.py  gauss_matrix.py  generateur.py  seek.py  transformation.py
pkg_regpoly/tests/: test_smoke.py
(+634 files in other folders)
