[build-system]
requires = ["setuptools >= 68.0", "setuptools-scm", "pybind11 >= 2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "regpoly"
version = "2.0.0"
description = "Analysis and search for combined pseudo-random number generators based on modulo-2 linear recurrences"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["pyyaml"]

[project.scripts]
regpoly = "regpoly.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
