[build-system]
requires = ["setuptools >= 68.0", "setuptools-scm", "pybind11 >= 2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "regpoly"
version = "2.0.0"
description = "Analysis and search for combined pseudo-random number generators based on modulo-2 linear recurrences"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["pyyaml"]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "aiosqlite>=0.19",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "markdown>=3.5",
]

[project.scripts]
regpoly = "regpoly.io.cli:main"
regpoly-web = "regpoly.web.app:main"

[tool.setuptools]
package-dir = {"regpoly" = "src/python"}

[tool.setuptools.packages.find]
where = ["src/python"]
namespaces = false

[tool.setuptools.package-data]
"regpoly.web" = ["schema.sql", "templates/**/*.html", "static/**/*"]

[tool.pytest.ini_options]
markers = [
    "slow: heavy cross-checks (mexp > 20000); opt in with `pytest -m slow`",
]
addopts = "-m 'not slow'"
